--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -195,7 +195,7 @@ a:hover{
 
 .button{
   padding: 1rem;
-  border: .1rem #808080 soild;
+  border: .1rem #808080 solid;
   border-radius: .5rem;
   cursor: pointer;
 }
@@ -204,8 +204,16 @@ a:hover{
   border: .1rem #404080 solid;
 }
 
-.button{
+.button.primary{
   background-color: #f0c040;
+}
+
+.button.secondary{
+  background-color: #f0f0f0;
+}
+
+.text-center{
+  text-align: center;
 }
 
 /* cart  */
@@ -264,4 +272,35 @@ a:hover{
   flex: 1 1;
   font-size: 2.5rem;
   text-align: right;
+}
+
+/* from  */
+.from{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.from-container{
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  padding: 2rem;
+  border: .1rem #c0f0f0 solid;
+  border-radius: .5rem;
+  list-style-type: none;
+}
+
+.from-container li{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+input{
+  padding: 1rem;
+  border: .1rem #c0c0c0 solid;
+  border-radius: .5rem; 
 }
