--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -304,3 +304,255 @@ input{
   border: .1rem #c0c0c0 solid;
   border-radius: .5rem; 
 }
+
+/* login animation  */
+.container{
+  margin: 0;
+  padding: 0;
+  width: 205vh;
+  height: 97vh;
+  /* background-image: linear-gradient(to right, rgb(130,131,219), rgb(223,96,149)); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  /* font-size: x-large; */
+  line-height: 4;
+}
+
+.set1{
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  float: left;
+  margin: 10px;
+  position: relative;
+  animation-name: set1;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 5s; */
+  /* animation-direction: alternate-reverse; */
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes set1{
+  0%{
+      /* background-color: #fff; */
+      /* left: 0px; */
+      /* top: 30px; */
+      /* border-radius: 0; */
+      opacity: 0.3;
+  }
+  25%{
+      /* background-color: coral;
+      left: 0px;
+      top: 250px;
+      border-radius: 10%; */
+      top: 30px;
+      opacity: 0.5;
+  }
+  50%{
+      /* background-color: crimson;
+      left: 250px;
+      top: 250px;
+      border-radius: 25%; */
+      opacity: 1;
+      top: 60px;
+  }
+  75%{
+      /* background-color: darkorchid;
+      left: 250px;
+      top: 0px;
+      border-radius: 37%; */
+      opacity: .5;
+      top: 30px;
+  }
+  100%{
+      /* background-color: #fff;
+      left: 0px;
+      top: 0px;
+      border-radius: 50%; */
+      opacity: .3;
+      top: 0;
+  }
+} 
+
+.set2{
+  width: 50px;
+  height: 50px;
+  background-color: green;
+  float: left;
+  margin: 10px;
+  position: relative;
+  animation-name: set2;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 5s; */
+  /* animation-direction: alternate-reverse; */
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes set2{
+  0%{
+      /* background-color: #fff; */
+      /* left: 0px; */
+      /* top: 20px; */
+      /* border-radius: 0; */
+      opacity: 0.3;
+  }
+  25%{
+      /* background-color: coral;
+      left: 0px;
+      top: 250px;
+      border-radius: 10%; */
+      bottom: 30px;
+      opacity: 0.5;
+  }
+  50%{
+      /* background-color: crimson;
+      left: 250px;
+      top: 250px;
+      border-radius: 25%; */
+      opacity: 1;
+      bottom: 60px;
+  }
+  75%{
+      /* background-color: darkorchid;
+      left: 250px;
+      top: 0px;
+      border-radius: 37%; */
+      opacity: .5;
+      bottom: 30px;
+  }
+  100%{
+      /* background-color: #fff;
+      left: 0px;
+      top: 0px;
+      border-radius: 50%; */
+      bottom: 0;
+      opacity: .3;
+  }
+} 
+
+.set3{
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+  float: left;
+  margin: 10px;
+  position: relative;
+  animation-name: set3;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 5s; */
+  /* animation-direction: alternate-reverse; */
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes set3{
+  0%{
+      /* background-color: #fff; */
+      /* left: 0px; */
+      /* bottom: 30px; */
+      /* border-radius: 0; */
+      opacity: 0.3;
+  }
+  25%{
+      /* background-color: coral;
+      left: 0px;
+      top: 250px;
+      border-radius: 10%; */
+      top: 30px;
+      opacity: 0.5;
+  }
+  50%{
+      /* background-color: crimson;
+      left: 250px;
+      top: 250px;
+      border-radius: 25%; */
+      opacity: 1;
+      top: 60px;
+  }
+  75%{
+      /* background-color: darkorchid;
+      left: 250px;
+      top: 0px;
+      border-radius: 37%; */
+      opacity: .5;
+      top: 30px;
+  }
+  100%{
+      /* background-color: #fff;
+      left: 0px;
+      top: 0px;
+      border-radius: 50%; */
+      opacity: .3;
+      top: 0;
+  }
+} 
+
+.set4{
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  float: left;
+  margin: 10px;
+  position: relative;
+  animation-name: set4;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  /* animation-delay: 5s; */
+  /* animation-direction: alternate-reverse; */
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes set4{
+  0%{
+      /* background-color: #fff; */
+      /* left: 0px; */
+      /* top: 20px; */
+      /* border-radius: 0; */
+      opacity: 0.3;
+  }
+  25%{
+      /* background-color: coral;
+      left: 0px;
+      top: 250px;
+      border-radius: 10%; */
+      bottom: 30px;
+      opacity: 0.5;
+  }
+  50%{
+      /* background-color: crimson;
+      left: 250px;
+      top: 250px;
+      border-radius: 25%; */
+      opacity: 1;
+      bottom: 60px;
+  }
+  75%{
+      /* background-color: darkorchid;
+      left: 250px;
+      top: 0px;
+      border-radius: 37%; */
+      opacity: .5;
+      bottom: 30px;
+  }
+  100%{
+      /* background-color: #fff;
+      left: 0px;
+      top: 0px;
+      border-radius: 50%; */
+      bottom: 0;
+      opacity: .3;
+  }
+} 
+
+.loading{
+  display: block;
+}
+
